--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <!-- Love Letter Effect -->
         <div class="love-letter" onclick="openLetter()">
-            ❤️ Dear Ritisha Verma ❤️ <br>
+            ❤️ Dear Rakshu ❤️ <br>
             Ek Chhoti Si Baat... 👀 <br>
             <span class="click-text">(Click to Open)</span>
         </div>
